Bug 73021 - Calc crashes on spell check
Summary: Calc crashes on spell check
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.1 rc
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0.2
Keywords:
: 73283 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-25 01:22 UTC by Gitsy
Modified: 2014-01-05 07:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
gdbtrace.log (49.28 KB, text/x-log)
2014-01-01 09:14 UTC, Gitsy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gitsy 2013-12-25 01:22:48 UTC
Problem description: Calc crashes on spell check

Steps to reproduce:

Open a spreadsheet with a misspelled word, when Spell Check is invoked (F7)
and action is selected (Correct, Ignore, etc) by clicking corresponding button, calc crashes.
Comment 2 Gitsy 2013-12-28 11:21:46 UTC
The bug is reproducible in ubuntu also (Version: 4.2.0.1 Build ID: 420m0(Build:1))
Comment 3 Michael Meeks 2013-12-28 14:14:26 UTC
I suspect some iteration of UNO component registration screwups, clearly it doesn't do this for most other people.

Can you move your profile away and see if that helps ? if so, can you tar up your profile and attach it here ? should be in ~/.config/libreoffice
please start clean with a pkill -9 -f soffice.bin between tests.

Beyond that; if you can start soffice.bin and attach gdb:

ps ax | grep soffice.bin
gdb
attach <pid of soffice.bin from above>
continue
... make it crash ...
thread apply all backtrace

And paste the output here; that would really help.

Thanks !
Comment 4 Gitsy 2013-12-30 06:56:22 UTC
(In reply to comment #3)
> I suspect some iteration of UNO component registration screwups, clearly it
> doesn't do this for most other people.
> 
> Can you move your profile away and see if that helps ? if so, can you tar up
> your profile and attach it here ? should be in ~/.config/libreoffice
> please start clean with a pkill -9 -f soffice.bin between tests.
> 
> Beyond that; if you can start soffice.bin and attach gdb:
> 
> ps ax | grep soffice.bin
> gdb
> attach <pid of soffice.bin from above>
> continue
> ... make it crash ...
> thread apply all backtrace
> 
> And paste the output here; that would really help.
> 
> Thanks !

Hi  Michael,
I have deleted Libreoffice user profile (ubuntu- .config/libreoffice/4/user). But no difference, it still crashes
Comment 5 Michael Meeks 2013-12-30 19:10:45 UTC
Good news; so - then we need the stack-trace from gdb using the instructions I pasted above.

Thanks !
Comment 6 Gitsy 2014-01-01 09:14:40 UTC
Created attachment 91382 [details]
gdbtrace.log
Comment 7 Michael Meeks 2014-01-01 10:51:28 UTC
What an interesting trace - thanks so much for that !

Thread 1 (Thread 0xb232f940 (LWP 5731)):
#0  ScPostIt::CreateCaptionFromInitData (this=this@entry=0x0, rPos=...) at /build/buildd/libreoffice-4.2.0~rc1/sc/source/core/data/postit.cxx:660
#1  0xab0329df in ScPostIt::UpdateCaptionPos (this=0x0, rPos=...) at /build/buildd/libreoffice-4.2.0~rc1/sc/source/core/data/postit.cxx:647
#2  0xaaecebf6 in ScColumn::CopyCellToDocument (this=this@entry=0x8d797a8, nSrcRow=nSrcRow@entry=9, nDestRow=nDestRow@entry=9, rDestCol=...) at /build/buildd/libreoffice-4.2.0~rc1/sc/source/core/data/column.cxx:1564

Looks like we de-reference a NULL note pointer while doing CopyCellToDocument - which is a shame ... but prolly an easy fix; working on it ...
Comment 8 Commit Notification 2014-01-01 11:09:25 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2528e5d9058dc7b88a55fcc69226161bccec2691

fdo#73021 - avoid call crash on spell-check + unit test.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Michael Meeks 2014-01-01 11:12:10 UTC
Fixed - with a unit test - thanks so much for the nice report & stack-trace too to spoil us :-) the unit test of course is rather larger than the trivial fix but ... ;-)
Comment 10 Commit Notification 2014-01-01 12:05:16 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=74fcb90dc73e235934fc19d39b7d7b0bf07cc8a5&h=libreoffice-4-2

fdo#73021 - avoid call crash on spell-check + unit test.


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Gitsy 2014-01-01 12:26:12 UTC
Thanks a lot Michael
Comment 12 Maxim Monastirsky 2014-01-05 07:30:08 UTC
*** Bug 73283 has been marked as a duplicate of this bug. ***