fdo#73021 - avoid call crash on spell-check + unit test.

Change-Id: I3588ef45617bda440f970e54274cc0985b7baed5